routing-repair.log
Sorry: IndentationError: unindent does not match any outer indentation level (semantic_image_intent_router.py, line 81)
==================================== ERRORS ====================================
_________ ERROR collecting tests/test_semantic_image_intent_router.py __________
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests/test_semantic_image_intent_router.py:13: in <module>
    from app.services.semantic_image_intent_router import (
E     File "/home/runner/work/Moones/Moones/app/services/semantic_image_intent_router.py", line 81
E       end += 1
E               ^
E   IndentationError: unindent does not match any outer indentation level
_____________ ERROR collecting tests/test_partner_photo_engine.py ______________
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests/test_partner_photo_engine.py:9: in <module>
    from app.services.semantic_image_intent_router import (
E     File "/home/runner/work/Moones/Moones/app/services/semantic_image_intent_router.py", line 81
E       end += 1
E               ^
E   IndentationError: unindent does not match any outer indentation level
=========================== short test summary info ============================
ERROR tests/test_semantic_image_intent_router.py
ERROR tests/test_partner_photo_engine.py
!!!!!!!!!!!!!!!!!!! Interrupted: 2 errors during collection !!!!!!!!!!!!!!!!!!!!
2 errors in 1.05s

compile_status=1
pytest_status=2
diff_status=0
